添加cross_object历史重复统计表。